# AuroraBar

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  mainwindow.h
res/: convert_to_ico.py
src/: main.cpp
src/analysis/: BandEnergyExtractor.h  FeatureSet.h  HpssExtractor.h  IFeatureExtractor.h  LogicThread.h  LoudnessExtractor.h  RmsExtractor.h  SpectralFluxExtractor.h
src/audio/: AudioCapture.h  AudioCaptureThread.h  FftProcessor.cpp  FftProcessor.h  WasapiCapture.cpp  WasapiCapture.h
src/config/: ConfigManager.cpp  ConfigManager.h
src/core/: CommandTypes.h  ObjectPool.h  Result.h  SPSCQueue.h  ThreadBase.cpp  ThreadBase.h  ThreadSEH.cpp
src/logging/: LoggerManager.cpp  LoggerManager.h
src/params/: BuiltInDefaults.cpp  BuiltInDefaults.h  ParamDef.h  ParamStore.cpp  ParamStore.h
src/physics/: PhysicsState.cpp  PhysicsState.h
src/render/: BorderGeometry.cpp  BorderGeometry.h  Camera.cpp  Camera.h  ColorScheme.cpp  ColorScheme.h  GlContext.cpp  GlContext.h  RenderFrameSEH.cpp  RenderThread.h
src/render/effects/: BallTrailEffect.cpp  BallTrailEffect.h  IEffect.h  LightColumnEffect.cpp  LightColumnEffect.h  ParticleEffect.cpp  ParticleEffect.h
src/render/effects/concerto/: AuroraRibbonEffect.cpp  AuroraRibbonEffect.h  ConcertoEffectFactory.cpp  ConcertoEffectFactory.h  CrystalEffect.cpp  CrystalEffect.h  FluidWaveEffect.cpp  FluidWaveEffect.h  GridBeamEffect.cpp  GridBeamEffect.h  IConcertoEffect.h  LaserSweepEffect.cpp  LaserSweepEffect.h  ParticleFlowEffect.cpp  ParticleFlowEffect.h  PulseRingEffect.cpp  PulseRingEffect.h  SpectrumBarEffect.cpp  SpectrumBarEffect.h
src/render/modes/: BounceBallRenderer.cpp  BounceBallRenderer.h  ConcertoRenderer.cpp  ConcertoRenderer.h  CycleRenderer.cpp  CycleRenderer.h  IModeRenderer.h
src/render/shaders/: particle.frag  particle.vert
src/segmentation/: SegmentationManager.cpp  SegmentationManager.h
src/transition/: EasingFunctions.h  ParameterTransition.cpp  ParameterTransition.h  StateTransition.cpp  StateTransition.h  TransitionManager.cpp  TransitionManager.h
src/ui/: GpuDetector.cpp  GpuDetector.h  OverlayWindow.cpp  OverlayWindow.h  QtOverlayWindow.cpp  QtOverlayWindow.h  QtRenderThread.cpp  QtRenderThread.h  SettingsPanel.cpp  SettingsPanel.h  SubmitThread.cpp  SubmitThread.h  mainwindow.cpp
